--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -9,13 +10,17 @@ android {
     defaultConfig {
         applicationId "com.example.madgroupassignment"
         minSdk 27
-        targetSdk 32
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
+        compileSdk 32
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+         buildFeatures
+            {
+                viewBinding true
+            }
     buildTypes {
         release {
             minifyEnabled false
@@ -30,10 +35,32 @@ android {
 
 dependencies {
 
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation platform('com.google.firebase:firebase-bom:31.1.1')
+
+    //firebase core
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    //firebase authenication
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    //firebase storage
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
+
+   /* implementation 'com.google.firebase:firebase-database:20.0.4'*/
+
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.karumi:dexter:6.2.2'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
+apply plugin: 'com.google.gms.google-services'
