--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,17 @@ android {
 
 dependencies {
 
+    //Glide library
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation 'androidx.navigation:navigation-ui:2.5.3'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+
+
     implementation 'com.google.firebase:firebase-analytics'
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
 
@@ -44,6 +55,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.1.0'
     //firebase storage
     implementation 'com.google.firebase:firebase-storage:20.1.0'
+    //firebase Database
+    implementation 'com.google.firebase:firebase-database:20.1.0'
 
    /* implementation 'com.google.firebase:firebase-database:20.0.4'*/
 
